1.5.0
- fixed request threshold icon to show ≤ instead of ≥
- changed provider priority icon to be in line with request priority
- changed provider prioritisation to provider priority > #existing deliveries from provider > amount #69

1.4.14
- added mod setting "Dispatcher Enabled"

1.4.13
- reverted base dependency  to 0.15.34 (stable)

1.4.12
- allowed negative provider priority again #64
- pushed base to 0.15.35

1.4.11
- thresholds are read as absolute values
- ignore negative control signals except thresholds

1.4.10
- improved circuit signal read performance
- pushed base to 0.15.34

1.4.9
- added localized mod title and mod description
- fixed possible integer overflow from mod settings
  - limit max values on stop and delivery timeout to 1 hour
  - limit other int settings to 2^32 -1

1.4.8
- added more details to debug log messages
- "no provider found" warning message changed from message level 2 to 1
- message level dropdown texts better reflect their behaviour

1.4.7
- fixed: distance check could prevent better matching trains from being picked
- fixed: error encoding train composition for trains longer than 31 carriages #55

1.4.6
- bumped required Factorio version to current stable
- fixed: Dispatcher picked trains closesest to request stop instead of providing stop
- fixed: local wagon capacity lookup table could potentially cause desync

1.4.5
- removed left over debug message

1.4.4
- fixed: deliveries where not properly reserved
- performance optimizations

1.4.3
- fixed nil reference when no providers are available

1.4.2
- internally store train capacity for faster access when searching available trains
- rewritten Dispatcher logic

1.4.1
- fixed: Items where not removed from providers after being added to an order
- fixed: orders where merged between different requester

1.4.0
- Dispatcher goes through requests by age of requests/item instead of requests/stop
- Dispatcher is no longer limited to 1 train/s
- spread dispatcher update over 3 ticks