@@ -34,6 +34,7 @@ ltn-min-train-length=minimale Zuglänge
 ltn-max-train-length=maximale Zuglänge
 ltn-max-trains=maximale Zuganzahl
 ltn-requester-threshold=Mindestmenge für Anforderung
+ltn-requester-priority=Anforderungspriorität
 ltn-provider-threshold=Mindestmenge für Anbieter
 ltn-provider-priority=Anbieterpriorität
 ltn-locked-slots=gesperrte Stapel pro Waggon
