@@ -34,8 +34,9 @@ ltn-min-train-length=Minimum Train Length
 ltn-max-train-length=Maximum Train Length
 ltn-max-trains=Limit Trains
 ltn-requester-threshold=Request Threshold
+ltn-requester-priority=Request Priority
 ltn-provider-threshold=Provide Threshold
-ltn-provider-priority=Provider Priority
+ltn-provider-priority=Provide Priority
 ltn-locked-slots=Locked Slots per Wagon
 ltn-disable-warnings=Disable Warning Messages
 
