@@ -36,37 +36,44 @@ data:extend({
   },
   {
     type = "virtual-signal",
-    name = "ltn-requester-threshold",
-    icon = "__LogisticTrainNetwork__/graphics/icons/requester-threshold.png",
-    subgroup = "LTN-signal",
-    order = "z[LTN-signal]-ca[ltn-requester-threshold]"
-  },
-  {
-    type = "virtual-signal",
     name = "ltn-provider-threshold",
     icon = "__LogisticTrainNetwork__/graphics/icons/provider-threshold.png",
     subgroup = "LTN-signal",
-    order = "z[LTN-signal]-da[ltn-provider-threshold]"
+    order = "z[LTN-signal]-ca[ltn-provider-threshold]"
   },  
   {
     type = "virtual-signal",
     name = "ltn-provider-priority",
     icon = "__LogisticTrainNetwork__/graphics/icons/provider-priority.png",
     subgroup = "LTN-signal",
-    order = "z[LTN-signal]-db[ltn-provider-priority]"
+    order = "z[LTN-signal]-cb[ltn-provider-priority]"
   },
   {
     type = "virtual-signal",
     name = "ltn-locked-slots",
     icon = "__LogisticTrainNetwork__/graphics/icons/locked-slot.png",
     subgroup = "LTN-signal",
-    order = "z[LTN-signal]-dd[ltn-locked-slots]"
+    order = "z[LTN-signal]-cd[ltn-locked-slots]"
   },
+  {
+    type = "virtual-signal",
+    name = "ltn-requester-threshold",
+    icon = "__LogisticTrainNetwork__/graphics/icons/requester-threshold.png",
+    subgroup = "LTN-signal",
+    order = "z[LTN-signal]-da[ltn-requester-threshold]"
+  },
+  {
+    type = "virtual-signal",
+    name = "ltn-requester-priority",
+    icon = "__LogisticTrainNetwork__/graphics/icons/requester-priority.png",
+    subgroup = "LTN-signal",
+    order = "z[LTN-signal]-db[ltn-requester-priority]"
+  },  
   {
     type = "virtual-signal",
     name = "ltn-disable-warnings",
     icon = "__LogisticTrainNetwork__/graphics/icons/disable-warnings.png",
     subgroup = "LTN-signal",
-    order = "z[LTN-signal]-ea[ltn-disable-warnings]"
+    order = "z[LTN-signal]-dd[ltn-disable-warnings]"
   },
 })
