@@ -1,5 +1,6 @@
 1.5.0
 - fixed request threshold icon to show ≤ instead of ≥
+- added request priority control signal
 - changed provider priority icon to be in line with request priority
 - changed provider prioritisation to provider priority > #existing deliveries from provider > amount #69
 
